# LLVM_GLSL

./: CMakeLists.txt  ir.ll  main.cpp  syntax.md  temp.glsl  tempAst.json  token.md  tokens.txt
include/: ast.h  generator.h  global.h  log.h  parser.h  scope.h  tokenizer.h
src/: ast.cpp  generator.cpp  global.cpp  log.cpp  parser.cpp  scope.cpp  tokenizer.cpp
test/: codegen_complex_expr.glsl  codegen_function_call.glsl  codegen_index.glsl  codegen_operator_and_expression.glsl  codegen_postfix_prefix_expr.glsl  codegen_return.glsl  codegen_sentences_and_scope.glsl  codegen_typeconstructor.glsl  temp.glsl  temp_break.glsl  temp_do_while.glsl  temp_expr.glsl  temp_for.glsl  temp_if.glsl  temp_if_else.glsl  temp_return.glsl
